--- a/build.gradle
+++ b/build.gradle
@@ -14,6 +14,12 @@ repositories {
     mavenCentral()
 }
 
+task print() {
+    doLast{
+        println "github push complete"
+    }
+}
+
 dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-web'
     testImplementation('org.springframework.boot:spring-boot-starter-test') {
