--- a/build.gradle
+++ b/build.gradle
@@ -3,6 +3,7 @@ plugins {
     id 'io.spring.dependency-management' version '1.0.8.RELEASE'
     id 'java'
     id 'com.google.cloud.tools.jib' version '1.0.0'
+    id 'com.palantir.docker' version '0.22.1'
 
 }
 
@@ -12,6 +13,10 @@ sourceCompatibility = '1.8'
 
 repositories {
     mavenCentral()
+}
+
+ext {
+    BUILD_VERSION = new Date().format("yyyyMMddHHmmss") // 빌드한 시간을 Image Tag 로 표시하기 위하여 사용한다.
 }
 
 
@@ -24,4 +29,11 @@ dependencies {
 
 test {
     useJUnitPlatform()
+}
+
+docker {
+    name "gaemi/jib-example-case1"
+    tags "${project.version}", "${BUILD_VERSION}"
+    files tasks.bootJar.outputs.files
+    buildArgs(['JAR_FILE': tasks.bootJar.outputs.files.singleFile.name])
 }
