--- a/DockerFile
+++ b/DockerFile
@@ -1,5 +1,18 @@
-FROM openjdk:8-jre-alpine
+# openjdk 8
+FROM java:8
+
+# data directory
+# Add a volume to /tmp
 VOLUME /tmp
-ARG JAR_FILE
-COPY ${JAR_FILE} app.jar
-ENTRYPOINT ["java","-Djava.security.egd=file:/dev/./urandom","-jar","/app.jar"]
+
+# Make port 8080 available to the world outside this container
+# EXPOSE 8080
+
+# The application's jar file
+ARG JAR_FILE=Spring/build/libs/demo-0.0.1-SNAPSHOT.jar
+
+# Add the application's jar to the container
+ADD ${JAR_FILE} demo.jar
+
+# Run the jar file
+ENTRYPOINT ["java","-Djava.security.egd=file:/dev/./urandom","-jar","/demo.jar"]
